# rs-f4ss

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh.md
.claude-flow/terminals/: store.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/rs-f4ss-cli/: Cargo.toml  build.rs
crates/rs-f4ss-cli/src/: main.rs  os_linux.rs  os_windows.rs
crates/rs-f4ss-core/: Cargo.toml
crates/rs-f4ss-core/src/: api.rs  cache.rs  error.rs  handle.rs  inode.rs  lib.rs  manager.rs  mount.rs  mount_linux.rs  mount_windows.rs  persistence.rs  prefetch.rs  share_manager.rs  ui.html
crates/rs-f4ss-core/src/backend/: common.rs  http.rs  mod.rs  types.rs  webdav.rs
crates/rs-f4ss-core/src/selfupdate/: mod.rs
crates/rs-f4ss-core/src/server/: autoindex.rs  handlers.rs  mod.rs  static_assets.rs  viewer.html  viewer.rs  webdav.rs
crates/rs-f4ss-core/src/server/static/: prism.css  prism.js
crates/selfupdater/: Cargo.toml
crates/selfupdater/src/: error.rs  lib.rs  progress.rs  replace.rs  restart.rs  server.rs  signature.rs  source.rs  updater.rs  version.rs
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
docs/: ADR.md  DEV_GUIDE.md  SPEC-v2.md  SPEC.md  TASKS.md  TDD.md  TEST_PLAN.md
docs/design/: share-viewer-mockup.html
tasks/: plan.md  todo.md
tests/: e2e-api.sh  e2e-share.sh  e2e.ps1  e2e.sh
